<resources>
    <string name="app_name">Ejercicio-Kotlin-Practice</string>
    <string name="title">Bienvenido</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="returnBtn">Return</string>

    <string name="help">?</string>

    <string name="forgotPassword">Forgotten password ?</string>
</resources>